<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorRegistrationUI"
    android:background="@drawable/grad_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/tvDoctorRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/doc_registration"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:fontFamily="@font/julius_sans_one" />

        <TextView
            android:id="@+id/tvDocStaffID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staffID"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etDocStaffID"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDocFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fname"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etDocFirstName"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDocLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lname"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etDocLastName"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDocUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etDocUsername"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDocPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etDocPassword"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:drawableRight="@drawable/show_password"
            android:drawableTint="@color/gradStart"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/agreementMsg1"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreementMsg2"
            android:textAlignment="center"
            android:textColor="#DA3F70" />

        <Button
            android:id="@+id/btnRegisterDoctor"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_round"
            android:backgroundTint="#DA3F70"
            android:drawableLeft="@drawable/singup"
            android:drawableTint="@color/white"
            android:paddingLeft="100sp"
            android:paddingRight="100sp"
            android:text="@string/btnregister"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>