<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".RegisterNowUI">

    <TextView
        android:id="@+id/tvWho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="144dp"
        android:text="@string/who_you_are"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/julius_sans_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPatient"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="128dp"
        android:background="@color/transparent"
        android:fontFamily="@font/antic"
        android:text="@string/patient"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWho" />

    <Button
        android:id="@+id/btnDoctor"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/transparent"
        android:fontFamily="@font/antic"
        android:text="@string/doctor"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPatient" />

    <Button
        android:id="@+id/btnNurse"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/transparent"
        android:fontFamily="@font/antic"
        android:text="@string/nurse"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDoctor" />

    <Button
        android:id="@+id/btnReceptionist"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/transparent"
        android:fontFamily="@font/antic"
        android:text="@string/receptionist"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNurse" />
</androidx.constraintlayout.widget.ConstraintLayout>